<resources>
    <string name="app_name">Subscriptions</string>

    <string name="ganpati_subscription">Ganesha subscription</string>
    <string name="marriage_list">Marriage list</string>
    <string name="birthday_party">Birthday Party</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="name">Name:</string>
    <string name="amount">Amount:</string>
    <string name="address">Address:</string>
    <string name="submit">Submit</string>
    <string name="all_details">Show All Subscriptions</string>
    <string name="hint_name">First_Name Middle_Name Last_Name</string>
    <string name="hint_amount">501</string>
    <string name="hint_address">Flat No.101, A Block/City/Village</string>
    <string name="hint_saree">1/0</string>
    <string name="hint_gift">Yes/No</string>
    <string name="toast_ent_all_details">Enter the all details</string>
    <string name="ganesha_subscription_success">Ganesha Subscription added successfully</string>
    <string name="error">Error.....</string>
    <string name="provide_all_details">Please provide all details....</string>
    <string name="no_data">No data....</string>
    <string name="hide">Hide</string>
    <string name="choice_for">Select marriage list for</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="saree">Saree</string>
    <string name="marriage_add_success">Added Successfully</string>
    <string name="gift">Gift:</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_language">Change Language</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="marathi">मराठी</string>
    <string name="name_voice">Speak the Name</string>
    <string name="amount_voice">Speak the Amount</string>
    <string name="address_voice">Speak the Address</string>
    <string name="saree_voice">Speak the Saree</string>
    <string name="gift_voice">Speak the Gift</string>
    <string name="gift_yes_no">Please field in Gift on Yes or No</string>
    <string name="download_in_pdf_file">Save in PDF file</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>