<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:gravity="center"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/alertLay"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/select_language"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/btn_english"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp">



                <TextView
                    android:id="@+id/txt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_37sdp"
                    android:text="@string/english"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    style="@style/ganesh_subs_text"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_marathi"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_10sdp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_37sdp"
                    android:text="@string/marathi"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp"
                    style="@style/ganesh_subs_text"/>
            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
